<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">aci570-db</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_person">Person</string>

    <!-- LABELS -->
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="email_label">Email</string>

    <!-- BUTTONS -->
    <string name="add_button_label">Add</string>
    <string name="save_button_label">Save</string>
    <string name="delete_button_label">Delete</string>
    <string name="user">User</string>

</resources>
