<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    style="?android:attr/buttonBarButtonStyle"
    tools:context=".PersonActivity" >
    
     <EditText
        android:id="@+id/firstNameField"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name_label" />
    
	<EditText
	      android:id="@+id/lastNameField"
	      android:inputType="text"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:ems="10"
	      android:hint="@string/last_name_label" />
      
	<EditText
	      android:id="@+id/emailField"
	      android:inputType="textEmailAddress"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:ems="10"
	      android:hint="@string/email_label" />
	
	<EditText
	    android:id="@+id/userField"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:ems="10"
	    android:hint="@string/user"
	    android:inputType="textEmailAddress" />
	
	 <Button
	        android:id="@+id/saveButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="17dp"
	        android:text="@string/save_button_label"
	        android:onClick="onSaveButtonClicked" />
	 
	 <Button
	        android:id="@+id/deleteButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="17dp"
	        android:text="@string/delete_button_label"
	        android:visibility="invisible"
	        android:onClick="onDeleteButtonClicked" />

</LinearLayout>
